# mcp-odoo-v9

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COOKBOOK.md  Dockerfile  Dockerfile.http  Dockerfile.sse  LICENSE  NOTICE  README.md  USER_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  fastmcp.json  pyproject.toml  run.py  run_server.py  run_server_http.py  run_server_sse.py
DOCS/: CLAUDE.md  DOCKER.md  SECURITY.md  STREAMINGHTTP_GUIDE.md  TRANSPORTS.md
src/odoo_mcp/: __init__.py  __main__.py  logging_utils.py  odoo_client.py  server.py
